# SeisTrace

./: AUTHORS  Makefile  Makefile.am  README.md  configure.in  meson.build
include/: SeisTrace.h  meson.build
src/: SeisTrace.c  meson.build
test/: check_header_type.c  create_header.c  create_trace.c  create_trace_with_header.c  meson.build  rw_header.c  rw_samples.c
