#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([libseistrace], [0.0.1], [andalevor@gmail.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace 'main' with a function in '-lgmp':
#AC_CHECK_LIB([gmp], [main])
# FIXME: Replace 'main' with a function in '-lm':
#AC_CHECK_LIB([m], [main])
# FIXME: Replace 'main' with a function in '-lmpfr':
#AC_CHECK_LIB([mpfr], [main])
# FIXME: Replace 'main' with a function in '-lpthread':
#AC_CHECK_LIB([pthread], [main])
# FIXME: Replace 'main' with a function in '-lqlibc':
#AC_CHECK_LIB([qlibc], [main])

# Checks for header files.
AC_CHECK_HEADERS([stdint.h sys/param.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRCOLL
AC_FUNC_STRTOD
AC_CHECK_FUNCS([gettimeofday memmove memset select strchr strcspn strpbrk strrchr strspn strstr strtol strtoul])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
